[tool.poetry]
name = "combined_log_analyzer"
version = "0.1.0"
description = ""
authors = ["uchida_kei <chanomijikan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.3"

[tool.poetry.scripts]
cla = "combined_log_analyzer.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
